[project]
name = "x-connector"
version = "0.1.0"
description = "X Connector — post, reply, like, retweet, follow and read your X (Twitter) timeline, mentions, bookmarks and profile, all through chat."
requires-python = ">=3.11"
dependencies = ["imperal-sdk>=5.9.11"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.setuptools]
py-modules = [
    "main", "app", "params", "response_models", "api_client",
    "handlers_oauth", "handlers_posts", "handlers_reads", "handlers_trends",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
